--- a/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
+++ b/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
@@ -4,8 +4,19 @@
 <head>
 <meta charset="UTF-8">
 <title>${pageTitle}</title>
+
+<!-- 제이쿼리 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<!-- 테일윈드 JIT -->
+<script src="https://unpkg.com/tailwindcss-jit-cdn"></script>
+
+<!-- 폰트어썸 -->
+<link rel="stylesheet" href="https://cdnjs.com/libraries/font-awesome" />
+
 <link rel="stylesheet" href="/resource/common.css">
 <script src="/resource/common.js"></script>
+
 </head>
 <body>
 	<h1 style= "line-height:2rem;">${pageTitle}</h1>
