--- a/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
+++ b/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
@@ -19,17 +19,36 @@
 
 </head>
 <body>
-	<h1 style= "line-height:2rem;">${pageTitle}</h1>
 	<header>
-		<a href="/">사이트A</a>
+		<div class="container mx-auto flex h-20">
+			<a href="/" class="flex items-center px-3">
+				<span>로고</span>
+			</a>
 
-		<ul>
-			<li>
-				<a href="/">홈</a>
-			</li>
-			<li>
-				<a href="/usr/article/list">리스트</a>
-			</li>
-		</ul>
+			<div class="flex-grow"></div>
+			<ul class="flex">
+				<li>
+					<a class="h-full flex items-center px-3 hover:underline" href="/">
+						<span>홈</span>
+					</a>
+				</li>
+				<li>
+					<a class="h-full flex items-center px-3 hover:underline" href="/usr/article/list">
+						<span>리스트</span>
+					</a>
+				</li>
+				<li>
+					<a class="h-full flex items-center px-3 hover:underline" href="/usr/member/doLogin">
+						<span>로그인</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+
 	</header>
-	<hr />
+	<section class="mt-5">
+	<div class="container mx-auto px-3">
+	${pageTitle}
+	</div>
+	</section>
+<main>
