--- a/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
+++ b/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
@@ -46,9 +46,7 @@
 		</div>
 
 	</header>
-	<section class="mt-5">
-	<div class="container mx-auto px-3">
-	${pageTitle}
-	</div>
-	</section>
-<main>
+  <section class="mt-5">
+    <div class="container mx-auto px-3">${pageTitle}</div>
+  </section>
+  <main>
