--- a/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
+++ b/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
@@ -19,33 +19,42 @@
 
 </head>
 <body>
-	<header>
-		<div class="container mx-auto flex h-20">
-			<a href="/" class="flex items-center px-3">
-				<span>로고</span>
-			</a>
+  <header>
+    <div class="container mx-auto flex h-20">
+      <a href="/" class="flex items-center px-3">
+        <span>로고</span>
+      </a>
 
-			<div class="flex-grow"></div>
-			<ul class="flex">
-				<li>
-					<a class="h-full flex items-center px-3 hover:underline" href="/">
-						<span>홈</span>
-					</a>
-				</li>
-				<li>
-					<a class="h-full flex items-center px-3 hover:underline" href="/usr/article/list">
-						<span>리스트</span>
-					</a>
-				</li>
-				<li>
-					<a class="h-full flex items-center px-3 hover:underline" href="/usr/member/doLogin">
-						<span>로그인</span>
-					</a>
-				</li>
-			</ul>
-		</div>
+      <div class="flex-grow"></div>
+      <ul class="flex">
+        <li>
+          <a class="h-full flex items-center px-3 hover:underline" href="/">
+            <span>홈</span>
+          </a>
+        </li>
+        <li>
+          <a class="h-full flex items-center px-3 hover:underline" href="/usr/article/list">
+            <span>리스트</span>
+          </a>
+        </li>
+        <c:if test="${!rq.isLogined() }">
+          <li>
+            <a class="h-full flex items-center px-3 hover:underline" href="/usr/member/login">
+              <span>로그인</span>
+            </a>
+          </li>
+        </c:if>
+        <c:if test="${rq.isLogined() }">
+          <li>
+            <a onclick="로그아웃 되었습니다." class="h-full flex items-center px-3 hover:underline" href="/usr/member/doLogout">
+              <span>로그아웃</span>
+            </a>
+          </li>
+        </c:if>
+      </ul>
+    </div>
 
-	</header>
+  </header>
   <section class="mt-5">
     <div class="container mx-auto px-3">${pageTitle}</div>
   </section>
