--- a/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
+++ b/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
@@ -1,4 +1,5 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
 <!DOCTYPE html>
 <html>
 <head>
@@ -39,6 +40,13 @@
             <span>리스트</span>
           </a>
         </li>
+        <c:if test="${rq.isLogined()}">
+          <li>
+            <a class="h-full flex items-center px-3 hover:underline" href="/usr/article/write">
+              <span>글쓰기</span>
+            </a>
+          </li>
+        </c:if>
         <c:if test="${!rq.isLogined() }">
           <li>
             <a class="h-full flex items-center px-3 hover:underline" href="/usr/member/login">
