--- a/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
+++ b/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
@@ -64,7 +64,7 @@
 
         <c:if test="${rq.isLogined() }">
           <li>
-            <a class="h-full flex px-3 items-center hover:underline" href="/usr/member/myPage?loginedId=${rq.isLoginedMemberId }">
+            <a class="h-full flex px-3 items-center hover:underline" href="/usr/member/myPage">
               <span>${rq.loginedMember.nickname}'s Profile</span>
             </a>
           </li>
